Fix border overlapping span container

--- a/style.css
+++ b/style.css
@@ -145,6 +145,8 @@ span {
 }
 
 .card img {
+    box-sizing: border-box;
+
     width: 100%;
     height: auto;  
 
